--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-style-app",
+  "name": "your-style-info",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-scroll": "^1.7.14",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.4",
     "redux-starter-kit": "^0.6.3"
   },
