--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scroll": "^1.7.14",
     "react-spring": "^8.0.27",
     "redux": "^4.0.4",
-    "redux-starter-kit": "^0.6.3"
+    "redux-starter-kit": "^0.6.3",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
