--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "author": "Dmitriy Yastrebov",
   "dependencies": {
+    "@testing-library/react": "^9.4.1",
     "bluebird": "^3.5.5",
     "body-scroll-lock": "^2.6.4",
     "i18next": "^17.0.14",
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test-once": "react-scripts test --watchAll=false",
+    "test:once": "react-scripts test --watchAll=false",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .gitignore ."
   },
@@ -46,5 +49,11 @@
   },
   "devDependencies": {
     "husky": "^4.2.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.js",
+      "!<rootDir>/src/assets/**"
+    ]
   }
 }
