--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "author": "Dmitriy Yastrebov",
   "dependencies": {
-    "@testing-library/react": "^9.4.1",
     "bluebird": "^3.5.5",
     "body-scroll-lock": "^2.6.4",
     "i18next": "^17.0.14",
@@ -48,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^9.4.1",
+    "@testing-library/jest-dom": "^5.1.1",
     "husky": "^4.2.1"
   },
   "jest": {
