--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:once": "react-scripts test --watchAll=false",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .gitignore ."
   },
@@ -44,6 +47,14 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^9.4.1",
+    "@testing-library/jest-dom": "^5.1.1",
     "husky": "^4.2.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.js",
+      "!<rootDir>/src/assets/**"
+    ]
   }
 }
