--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,5 @@
 {
   "hooks": {
-    "pre-commit": "npm run lint",
-    "pre-push": "npm run test:pre-push"
+    "pre-commit": "npm run lint && npm run test:pre-push"
   }
 }
