--- a/.huskyrc
+++ b/.huskyrc
@@ -1,5 +1,6 @@
 {
   "hooks": {
-    "pre-commit": "npm run test:pre-push && npm run lint"
+    "pre-commit": "npm run lint",
+    "pre-push": "npm run test:pre-push"
   }
 }
