--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "i18next": "^17.0.14",
     "i18next-browser-languagedetector": "^3.0.3",
     "i18next-xhr-backend": "^3.1.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-i18next": "^10.12.4",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.4.1",
     "react-scroll": "^1.7.14",
     "react-spring": "^8.0.27",
     "redux": "^4.0.4",
@@ -51,7 +51,9 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
     "cross-env": "^7.0.2",
-    "husky": "^4.2.1"
+    "eslint-plugin-jest": "^23.10.0",
+    "husky": "^4.2.1",
+    "snapshot-diff": "^0.8.0"
   },
   "jest": {
     "collectCoverageFrom": [
