--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   "jest": {
     "collectCoverageFrom": [
       "<rootDir>/src/**/*.js",
+      "!<rootDir>/src/api/**",
+      "!<rootDir>/src/ApplicationNode/**",
       "!<rootDir>/src/assets/**",
       "!<rootDir>/src/constants/**"
     ]
