--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
+    "@testing-library/react-hooks": "^3.2.1",
     "cross-env": "^7.0.2",
     "eslint-plugin-jest": "^23.10.0",
     "husky": "^4.2.1",
+    "react-test-renderer": "^16.13.1",
     "snapshot-diff": "^0.8.0"
   },
   "jest": {
