exclude src/index.js from coverage

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "jest": {
     "collectCoverageFrom": [
       "<rootDir>/src/**/*.js",
+      "!<rootDir>/src/index.js",
       "!<rootDir>/src/api/**",
       "!<rootDir>/src/ApplicationNode/**",
       "!<rootDir>/src/assets/**",
