--- a/.eslintrc
+++ b/.eslintrc
@@ -100,6 +100,11 @@
       "rules": {
         "react/display-name": 0
       }
+    }, {
+      "files": "*.test.js",
+      "rules": {
+        "react/prop-types": 0
+      }
     }
   ]
 }
