--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test:once": "react-scripts test --watchAll=false",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
-    "test:pre-push": "cross-env CI=true react-scripts test --env=jsdom --watchAll=false",
+    "test:pre-push": "cross-env CI=true test:coverage --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .gitignore ."
   },
@@ -67,6 +67,14 @@
       "!<rootDir>/src/constants/**",
       "!<rootDir>/src/services/**",
       "!<rootDir>/**/useResizeObserver.js"
-    ]
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    }
   }
 }
