--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
     "@testing-library/react-hooks": "^3.2.1",
+    "@testing-library/user-event": "^10.3.1",
     "cross-env": "^7.0.2",
     "eslint-plugin-jest": "^23.10.0",
     "husky": "^4.2.1",
