HeaderMobile integrational test suite

--- a/package.json
+++ b/package.json
@@ -71,10 +71,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 15,
-        "functions": 21,
-        "lines": 25,
-        "statements": 24
+        "statements": 55,
+        "branches": 45,
+        "functions": 50,
+        "lines": 55
       }
     }
   }
