--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "dependencies": {
     "bluebird": "^3.5.5",
     "body-scroll-lock": "^2.6.4",
-    "i18next": "^17.0.14",
-    "i18next-browser-languagedetector": "^3.0.3",
+    "i18next": "^19.4.5",
+    "i18next-browser-languagedetector": "^4.2.0",
     "i18next-xhr-backend": "^3.1.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-i18next": "^10.12.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-i18next": "^11.5.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.4.1",
     "react-scroll": "^1.7.14",
     "react-spring": "^8.0.27",
     "redux": "^4.0.4",
@@ -28,7 +28,7 @@
     "test:once": "react-scripts test --watchAll=false",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
-    "test:pre-push": "cross-env CI=true react-scripts test --env=jsdom --watchAll=false",
+    "test:pre-push": "cross-env CI=true react-scripts test --coverage --env=jsdom --watchAll=false",
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .gitignore ."
   },
@@ -50,13 +50,32 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
+    "@testing-library/react-hooks": "^3.2.1",
+    "@testing-library/user-event": "^10.3.1",
     "cross-env": "^7.0.2",
-    "husky": "^4.2.1"
+    "eslint-plugin-jest": "^23.10.0",
+    "husky": "^4.2.1",
+    "react-test-renderer": "^16.13.1",
+    "snapshot-diff": "^0.8.0"
   },
   "jest": {
     "collectCoverageFrom": [
       "<rootDir>/src/**/*.js",
-      "!<rootDir>/src/assets/**"
-    ]
+      "!<rootDir>/src/index.js",
+      "!<rootDir>/src/api/**",
+      "!<rootDir>/src/ApplicationNode/**",
+      "!<rootDir>/src/assets/**",
+      "!<rootDir>/src/shared/utils/**",
+      "!<rootDir>/src/services/**",
+      "!<rootDir>/**/useResizeObserver.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 83,
+        "branches": 81,
+        "functions": 74,
+        "lines": 83
+      }
+    }
   }
 }
