--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
       "<rootDir>/src/**/*.js",
       "!<rootDir>/src/index.js",
       "!<rootDir>/src/api/**",
-      "!<rootDir>/src/ApplicationNode/**",
+      "!<rootDir>/src/ApplicationNode/*",
       "!<rootDir>/src/assets/**",
       "!<rootDir>/src/shared/utils/**",
       "!<rootDir>/src/services/**",
