--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "author": "Dmitriy Yastrebov",
   "dependencies": {
+    "@tanem/react-nprogress": "^3.0.28",
     "bluebird": "^3.5.5",
     "body-scroll-lock": "^2.6.4",
     "i18next": "^19.4.5",
