--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "test:once": "react-scripts test --watchAll=false",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
-    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
+    "test:debug": "./node_modules/.bin/react-scripts --inspect-brk test --env=jsdom --runInBand",
     "test:pre-push": "cross-env CI=true react-scripts test --coverage --env=jsdom --watchAll=false",
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .gitignore ."
