--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cross-env": "^7.0.2",
     "eslint-plugin-jest": "^23.10.0",
     "husky": "^4.2.1",
+    "intersection-observer": "^0.11.0",
     "react-test-renderer": "^16.13.1",
     "snapshot-diff": "^0.8.0"
   },
