move husky config to package.json

--- a/package.json
+++ b/package.json
@@ -72,5 +72,9 @@
         "lines": 76
       }
     }
+  },
+  "hooks": {
+    "pre-commit": "npm run lint",
+    "pre-push": "npm run test:pre-push"
   }
 }
