--- a/package.json
+++ b/package.json
@@ -76,5 +76,8 @@
   "hooks": {
     "pre-commit": "npm run lint",
     "pre-push": "npm run test:pre-push"
+  },
+  "wallaby": {
+    "name": "Your Style - Wallaby App"
   }
 }
