--- a/package.json
+++ b/package.json
@@ -18,23 +18,24 @@
     "@tanem/react-nprogress": "^3.0.30",
     "bluebird": "^3.5.5",
     "body-scroll-lock": "^2.6.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.3",
     "react-scroll": "^1.7.14",
     "react-spring": "^8.0.27",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^10.3.1",
     "cross-env": "^7.0.2",
     "eslint-plugin-jest": "^23.10.0",
     "husky": "^4.2.1",
     "intersection-observer": "^0.11.0",
+    "mq-polyfill": "^1.1.8",
     "react-test-renderer": "^16.13.1",
     "snapshot-diff": "^0.8.0"
   },
