--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "test:debug": "./node_modules/.bin/react-scripts --inspect-brk test --env=jsdom --runInBand",
     "test:pre-push": "cross-env CI=true react-scripts test --coverage --env=jsdom --watchAll=false",
     "eject": "react-scripts eject",
-    "lint": "eslint --ignore-path .gitignore ."
+    "lint": "eslint --ignore-path .gitignore .",
+    "prepare": "husky install",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@tanem/react-nprogress": "^3.0.30",
     "bluebird": "^3.5.5",
-    "body-scroll-lock": "^2.6.4",
+    "body-scroll-lock": "^3.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.0.1",
@@ -29,12 +31,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/react-hooks": "^3.2.1",
-    "@testing-library/user-event": "^10.3.1",
+    "@testing-library/react-hooks": "^5.1.0",
+    "@testing-library/user-event": "^12.8.3",
     "cross-env": "^7.0.2",
-    "eslint-plugin-jest": "^23.10.0",
-    "husky": "^4.2.1",
-    "intersection-observer": "^0.11.0",
+    "eslint-plugin-jest": "^24.2.0",
+    "husky": "^5.1.3",
+    "intersection-observer": "^0.12.0",
     "mq-polyfill": "^1.1.8",
     "react-test-renderer": "^16.13.1",
     "snapshot-diff": "^0.8.0"
@@ -73,10 +75,6 @@
         "lines": 76
       }
     }
-  },
-  "hooks": {
-    "pre-commit": "npm run lint",
-    "pre-push": "npm run test:pre-push"
   },
   "wallaby": {
     "name": "Your Style - Wallaby App"
