--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:pre-push": "cross-env CI=true react-scripts test --coverage --env=jsdom --watchAll=false",
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .gitignore .",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@tanem/react-nprogress": "^3.0.30",
