--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-scroll-lock": "^3.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.17.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.7.14",
