--- a/package.json
+++ b/package.json
@@ -34,12 +34,20 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.5",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "cross-env": "^7.0.2",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-jest": "^24.2.0",
     "husky": "^6.0.0",
     "intersection-observer": "^0.12.0",
     "mq-polyfill": "^1.1.8",
-    "snapshot-diff": "^0.8.0"
+    "snapshot-diff": "^0.8.0",
+    "typescript": "^4.3.4"
   },
   "eslintConfig": {
     "extends": "react-app"
