--- a/package.json
+++ b/package.json
@@ -18,26 +18,27 @@
   },
   "dependencies": {
     "@tanem/react-nprogress": "^3.0.30",
-    "bluebird": "^3.5.5",
     "body-scroll-lock": "^3.1.5",
+    "msw": "^0.32.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.17.2",
-    "react-router-dom": "^5.0.1",
+    "react-query": "^3.19.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.7.14",
     "react-spring": "^8.0.27",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/react-hooks": "^5.1.0",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^7.0.1",
+    "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.5",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "cross-env": "^7.0.2",
@@ -68,9 +69,6 @@
     "collectCoverageFrom": [
       "<rootDir>/src/**/*.js",
       "!<rootDir>/src/index.js",
-      "!<rootDir>/src/api/**",
-      "!<rootDir>/src/ApplicationNode/*",
-      "!<rootDir>/src/assets/**",
       "!<rootDir>/src/shared/utils/**",
       "!<rootDir>/src/services/**",
       "!<rootDir>/**/useResizeObserver.js"
