--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
   },
   "dependencies": {
     "@tanem/react-nprogress": "^3.0.30",
-    "body-scroll-lock": "^3.1.5",
-    "msw": "^0.32.2",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.19.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-scroll": "^1.7.14",
+    "react-scroll": "^1.8.3",
     "react-spring": "^8.0.27",
     "resize-observer-polyfill": "^1.5.1"
   },
@@ -34,11 +33,13 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/user-event": "^13.2.1",
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.5",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-scroll": "^1.8.3",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "cross-env": "^7.0.2",
@@ -47,6 +48,7 @@
     "husky": "^6.0.0",
     "intersection-observer": "^0.12.0",
     "mq-polyfill": "^1.1.8",
+    "msw": "^0.34.0",
     "snapshot-diff": "^0.8.0",
     "typescript": "^4.3.4"
   },
