--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.19.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.3",
     "react-spring": "^8.0.27",
     "resize-observer-polyfill": "^1.5.1"
