--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.19.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.3",
     "react-spring": "^8.0.27",
     "resize-observer-polyfill": "^1.5.1"
@@ -40,11 +40,12 @@
     "@types/react-dom": "^17.0.8",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-scroll": "^1.8.3",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^4.28.1",
     "cross-env": "^7.0.2",
+    "eslint": "^8.18.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-jest": "^24.2.0",
+    "eslint-plugin-jest": "^26.5.3",
     "husky": "^6.0.0",
     "intersection-observer": "^0.12.0",
     "mq-polyfill": "^1.1.8",
