--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,18 @@
 {
   "plugins": ["jest"],
   "extends": [
-    "react-app", "eslint:recommended", "plugin:react/recommended", "plugin:jest/style", "plugin:jest/recommended", "plugin:@typescript-eslint/recommended"
+    "react-app",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:jest/style",
+    "plugin:jest/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
     "strict": ["error", "never"],
 
     // Possible Errors
-    "no-console": ["warn", {"allow": ["warn", "error"]}],
+    "no-console": ["warn", { "allow": ["warn", "error"] }],
     "no-template-curly-in-string": "error",
 
     // Best Practices
@@ -24,34 +29,37 @@
 
     // TypeScript
     "no-use-before-define": "off", // must disable the base rule as it can report incorrect errors
-    "@typescript-eslint/no-use-before-define": ["error", {"functions": false, "classes": true}],
+    "@typescript-eslint/no-use-before-define": [
+      "error",
+      { "functions": false, "classes": true }
+    ],
     "@typescript-eslint/no-empty-function": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/explicit-module-boundary-types": 0,
 
     // Stylistic Issues
-    "indent": ["error", 2, {"SwitchCase": 1}],
-    "semi": ["error", "never"],
-    "space-in-parens": ["error", "never"],
-    "array-bracket-spacing": ["error", "never"],
-    "block-spacing": ["error", "never"],
-    "brace-style": ["error", "1tbs", {"allowSingleLine": true}],
-    "keyword-spacing": ["error", {
-      "overrides": {
-        "if": {"after": false},
-        "for": {"after": false},
-        "while": {"after": false},
-        "switch": {"after": false}
-      }
-    }],
-    "camelcase": "error",
-    "computed-property-spacing": ["error", "never"],
-    "eol-last": ["error", "never"],
-    "no-multiple-empty-lines": ["error", {"max": 1}],
-    "nonblock-statement-body-position": ["error", "beside"],
-    "padded-blocks": ["error", "never"],
-    "quotes": ["error", "single", {"allowTemplateLiterals": true}],
-    "import/no-anonymous-default-export": "off",
+    // "indent": ["error", 2, {"SwitchCase": 1}],
+    // "semi": ["error", "never"],
+    // "space-in-parens": ["error", "never"],
+    // "array-bracket-spacing": ["error", "never"],
+    // "block-spacing": ["error", "never"],
+    // "brace-style": ["error", "1tbs", {"allowSingleLine": true}],
+    // "keyword-spacing": ["error", {
+    //   "overrides": {
+    //     "if": {"after": false},
+    //     "for": {"after": false},
+    //     "while": {"after": false},
+    //     "switch": {"after": false}
+    //   }
+    // }],
+    // "camelcase": "error",
+    // "computed-property-spacing": ["error", "never"],
+    // "eol-last": ["error", "never"],
+    // "no-multiple-empty-lines": ["error", {"max": 1}],
+    // "nonblock-statement-body-position": ["error", "beside"],
+    // "padded-blocks": ["error", "never"],
+    // "quotes": ["error", "single", {"allowTemplateLiterals": true}],
+    // "import/no-anonymous-default-export": "off",
 
     // ECMAScript 6
     "arrow-body-style": ["error", "as-needed"],
@@ -66,29 +74,38 @@
 
     // React/JSX Style Guide
     "jsx-quotes": ["error", "prefer-double"],
-    "react/no-multi-comp": ["error", {"ignoreStateless": true}],
-    "react/prefer-stateless-function": ["error", {"ignorePureComponents": true}],
+    "react/no-multi-comp": ["error", { "ignoreStateless": true }],
+    "react/prefer-stateless-function": [
+      "error",
+      { "ignorePureComponents": true }
+    ],
     "react/jsx-closing-tag-location": "error",
-    "react/jsx-tag-spacing": ["error", {
-      "closingSlash": "never",
-      "beforeSelfClosing": "always",
-      "afterOpening": "never",
-      "beforeClosing": "never"
-    }],
-    "react/jsx-curly-spacing": ["error", {"when": "never", "children": true}],
-    "react/jsx-pascal-case": ["error", {"allowAllCaps": false}],
+    "react/jsx-tag-spacing": [
+      "error",
+      {
+        "closingSlash": "never",
+        "beforeSelfClosing": "always",
+        "afterOpening": "never",
+        "beforeClosing": "never"
+      }
+    ],
+    "react/jsx-curly-spacing": ["error", { "when": "never", "children": true }],
+    "react/jsx-pascal-case": ["error", { "allowAllCaps": false }],
     "react/jsx-boolean-value": ["error", "never"],
-    "react/jsx-wrap-multilines": ["error", {
-      "declaration": "parens-new-line",
-      "assignment": "parens-new-line",
-      "return": "parens-new-line",
-      "arrow": "parens-new-line",
-      "condition": "parens-new-line",
-      "logical": "parens-new-line",
-      "prop": "parens-new-line"
-    }],
-    "react/self-closing-comp": ["error", {"component": true, "html": true}],
-    "react/jsx-no-bind": ["error", {"allowArrowFunctions": true}],
+    "react/jsx-wrap-multilines": [
+      "error",
+      {
+        "declaration": "parens-new-line",
+        "assignment": "parens-new-line",
+        "return": "parens-new-line",
+        "arrow": "parens-new-line",
+        "condition": "parens-new-line",
+        "logical": "parens-new-line",
+        "prop": "parens-new-line"
+      }
+    ],
+    "react/self-closing-comp": ["error", { "component": true, "html": true }],
+    "react/jsx-no-bind": ["error", { "allowArrowFunctions": true }],
     "react/no-children-prop": "off",
 
     // Tests
