--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "author": "Dmitriy Yastrebov",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "vite build",
     "test": "react-scripts test",
     "test:once": "react-scripts test --watchAll=false",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
@@ -21,11 +22,10 @@
   "dependencies": {
     "@tanem/react-nprogress": "^3.0.30",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-query": "^3.19.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.3",
     "react-spring": "^8.0.27",
     "resize-observer-polyfill": "^1.5.1"
@@ -48,18 +48,23 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.5",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-scroll": "^1.8.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "babel-plugin-named-exports-order": "^0.0.2",
     "cross-env": "^7.0.2",
-    "eslint": "^8.18.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-jest": "^26.5.3",
+    "eslint": "^8.55.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-vitest": "^0.3.17",
     "husky": "^6.0.0",
     "intersection-observer": "^0.12.0",
     "mq-polyfill": "^1.1.8",
@@ -68,6 +73,8 @@
     "prop-types": "^15.8.1",
     "snapshot-diff": "^0.8.0",
     "typescript": "^4.3.4",
+    "vite": "^5.0.8",
+    "vite-plugin-eslint": "^1.8.1",
     "webpack": "^5.73.0"
   },
   "eslintConfig": {
