--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,7 @@
     "@typescript-eslint/no-empty-function": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/explicit-module-boundary-types": 0,
+    "@typescript-eslint/no-unused-vars": 1,
 
     // ECMAScript 6
     "arrow-body-style": ["error", "as-needed"],
