fix vercel routing

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test:debug": "./node_modules/.bin/react-scripts --inspect-brk test --env=jsdom --runInBand",
     "test:pre-push": "cross-env CI=true react-scripts test --coverage --env=jsdom --watchAll=false",
     "eject": "react-scripts eject",
-    "lint": "eslint --ignore-path .gitignore .",
+    "check-types": "tsc",
+    "lint": "eslint --ignore-path .gitignore . --max-warnings 0 --fix",
+    "validate": "pnpm run check-types && pnpm run lint",
     "postinstall": "husky install",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006 -s public",
