--- a/.gitignore
+++ b/.gitignore
@@ -9,16 +9,9 @@
 /coverage
 
 # production
-/build
+/dist
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 .idea
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.next
+next-env.d.ts
