--- a/package.json
+++ b/package.json
@@ -5,26 +5,24 @@
   "author": "Dmitriy Yastrebov",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "test": "react-scripts test",
     "test:once": "react-scripts test --watchAll=false",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
     "test:debug": "./node_modules/.bin/react-scripts --inspect-brk test --env=jsdom --runInBand",
     "test:pre-push": "cross-env CI=true react-scripts test --coverage --env=jsdom --watchAll=false",
-    "eject": "react-scripts eject",
     "check-types": "tsc",
     "lint": "eslint --ignore-path .gitignore . --max-warnings 0 --fix",
     "validate": "pnpm run check-types && pnpm run lint",
     "postinstall": "husky install",
-    "prepare": "husky install",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@tanem/react-nprogress": "^3.0.30",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.19.1",
@@ -34,17 +32,6 @@
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^6.5.9",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack5": "^6.5.9",
-    "@storybook/manager-webpack5": "^6.5.9",
-    "@storybook/node-logger": "^6.5.9",
-    "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
@@ -53,7 +40,7 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.17",
+    "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-scroll": "^1.8.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -75,23 +62,10 @@
     "prettier": "^3.1.1",
     "prop-types": "^15.8.1",
     "snapshot-diff": "^0.8.0",
-    "typescript": "^4.3.4",
+    "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vite-plugin-eslint": "^1.8.1",
     "webpack": "^5.73.0"
-  },
-  "eslintConfig": {
-    "extends": "react-app",
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ]
   },
   "browserslist": {
     "production": [
