--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,19 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "downlevelIteration": true,
-    "jsx": "react-jsx",
-    "strict": true,
-    "noImplicitAny": false,
+    "jsx": "preserve",
+    "incremental": true,
+    "baseUrl": "src",
     "paths": {
       "~api/*": ["api/*"],
       "~assets/*": ["assets/*"],
@@ -26,8 +22,20 @@
       "~contexts/*": ["contexts/*"],
       "~services/*": ["services/*"],
       "~shared/*": ["shared/*"]
-    }
-    // "types": ["vitest/globals"]
+    },
+    // TODO: enable this
+    "noImplicitAny": false,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["src"]
+  "include": [
+    "./src",
+    "./dist/types/**/*.ts",
+    "./next-env.d.ts",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": ["./node_modules"]
 }
