--- a/package.json
+++ b/package.json
@@ -45,8 +45,6 @@
     "@types/react-scroll": "^1.8.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "babel-plugin-named-exports-order": "^0.0.2",
     "cross-env": "^7.0.2",
     "eslint": "^8.55.0",
     "eslint-config-react-app": "^7.0.1",
@@ -54,18 +52,13 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-vitest": "^0.3.17",
     "husky": "^6.0.0",
     "intersection-observer": "^0.12.0",
     "mq-polyfill": "^1.1.8",
     "msw": "^0.34.0",
     "prettier": "^3.1.1",
-    "prop-types": "^15.8.1",
     "snapshot-diff": "^0.8.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.8",
-    "vite-plugin-eslint": "^1.8.1",
-    "webpack": "^5.73.0"
+    "typescript": "^5.3.3"
   },
   "browserslist": {
     "production": [
