--- a/.eslintrc
+++ b/.eslintrc
@@ -2,13 +2,12 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "env": { "browser": true, "es2020": true },
-  "plugins": ["react-refresh", "vitest"],
+  "plugins": ["react-refresh"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:vitest/recommended"
+    "plugin:react-hooks/recommended"
   ],
   "ignorePatterns": ["build", ".eslintrc"],
   "rules": {
@@ -78,18 +77,6 @@
     "react/jsx-curly-spacing": ["error", { "when": "never", "children": true }],
     "react/jsx-pascal-case": ["error", { "allowAllCaps": false }],
     "react/jsx-boolean-value": ["error", "never"],
-    "react/jsx-wrap-multilines": [
-      "error",
-      {
-        "declaration": "parens-new-line",
-        "assignment": "parens-new-line",
-        "return": "parens-new-line",
-        "arrow": "parens-new-line",
-        "condition": "parens-new-line",
-        "logical": "parens-new-line",
-        "prop": "parens-new-line"
-      }
-    ],
     "react/self-closing-comp": ["error", { "component": true, "html": true }],
     "react/jsx-no-bind": ["error", { "allowArrowFunctions": true }],
     "react/no-children-prop": "off"
