--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4.30.2",
     "@tanem/react-nprogress": "^3.0.30",
     "body-scroll-lock": "^4.0.0-beta.0",
     "react": "^18.2.0",
