restore Next.js

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Dmitriy Yastrebov",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "test": "react-scripts test",
     "test:once": "react-scripts test --watchAll=false",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@tanem/react-nprogress": "^3.0.30",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.19.1",
@@ -43,7 +44,6 @@
     "@types/react-scroll": "^1.8.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
     "cross-env": "^7.0.2",
     "eslint": "^8.55.0",
     "eslint-config-react-app": "^7.0.1",
@@ -51,16 +51,13 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-vitest": "^0.3.17",
     "husky": "^6.0.0",
     "intersection-observer": "^0.12.0",
     "mq-polyfill": "^1.1.8",
     "msw": "^0.34.0",
     "prettier": "^3.1.1",
     "snapshot-diff": "^0.8.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.8",
-    "vite-plugin-eslint": "^1.8.1"
+    "typescript": "^5.3.3"
   },
   "browserslist": {
     "production": [
