--- a/package.json
+++ b/package.json
@@ -21,17 +21,18 @@
   },
   "dependencies": {
     "@tanem/react-nprogress": "^3.0.30",
+    "@tanstack/react-query": "^5.17.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.19.1",
     "react-router-dom": "^6.21.1",
     "react-scroll": "^1.8.3",
     "react-spring": "^8.0.27",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.17.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
